--- a/client/app/components/products/products.component.html
+++ b/client/app/components/products/products.component.html
@@ -1,6 +1,6 @@
-<form class="well" (submit)="addTask($event)">
+<form class="well" (submit)="addProduct($event)">
     <div class="form-group">
-      <input type="text" [(ngModel)]="title" name="title" class="form-control" placeholder="Add Task...">    
+      <input type="text" [(ngModel)]="sku" name="sku" class="form-control" placeholder="Add SKU...">    
     </div>  
 </form>
 
@@ -16,7 +16,7 @@
             {{product.name}}    
       </div> 
       <div class="col-md-3">
-          <input type="button" (click)="deleteTask(task._id)" value="Delete" class="btn btn-danger">    
+          <input type="button" (click)="deleteProduct(product.sku)" value="Delete" class="btn btn-danger">    
       </div>
       <br><br>
   </div>
