--- a/client/app/components/inventory/inventory.component.html
+++ b/client/app/components/inventory/inventory.component.html
@@ -16,10 +16,10 @@
                               UPC
                         </div> 
                         <div class="col-sm-3 col-md-3">
-                              NAME
+                              产品名称
                         </div> 
                         <div class="col-sm-2 col-md-2">
-                              QUANTITY
+                              数量
                         </div> 
                         <div class="col-sm-3 col-md-3">
                         </div>
@@ -37,12 +37,13 @@
         <div class="col-sm-3 col-md-3">
               {{product.name}}    
         </div> 
+        
         <div class="col-sm-2 col-md-2">
               
-              <input [(ngModel)]="product.quantity" value=""/>  
+              <input [(ngModel)]="product.quantity" value="" (keydown)="checkQtyChange(product)"/>  
         </div> 
         <div class="col-sm-3 col-md-3">
-            <input type="button" (click)="updateProduct(product)" value="Save" class="btn btn-success">
+            <button type="button" [disabled]="checkDisable(product)" (click)="updateProduct(product)" class="btn btn-success">Save</button>
             <input type="button" (click)="deleteProduct(product._id)" value="Delete" class="btn btn-danger">    
         </div>
       </div>  
